--- a/Differentiation/diff.tex
+++ b/Differentiation/diff.tex
@@ -94,7 +94,13 @@
 \item If $y=x^{\sin x }+\sin^{-1}(\sqrt x)$, the find $\frac{dy}{dx}$.
 \item Find the intervals in which the function $f$ defined as $f(x) = \sin(x) + \cos(x)$, $0 \leq x \leq 2\pi$ is strictly increasing or decreasing.
 \item Prove that the radius of the right circular cylinder of greatest curved surface area which can be inscribed in a given cone is half of that of the cone. 
-
+\item $\lim\limits_{x \to 0}{\frac{e^{-x} - e^x}{x}}$ is equal to
+\begin{enumerate}
+    \item $2$
+    \item $1$
+    \item $-1$
+    \item $2$
+\end{enumerate}
 
 \end{enumerate}
 
