--- a/Differentiation/diff.tex
+++ b/Differentiation/diff.tex
@@ -1,84 +1,84 @@
-\documentclass[12pt,-letter paper]{article}
-\usepackage{siunitx}
-\usepackage{setspace}
-\usepackage{gensymb}
-\usepackage{xcolor}
-\usepackage{caption}
+%\documentclass[12pt,-letter paper]{article}
+%\usepackage{siunitx}
+%\usepackage{setspace}
+%\usepackage{gensymb}
+%\usepackage{xcolor}
+%\usepackage{caption}
 %\usepackage{subcaption}
-\doublespacing
-\singlespacing
-\usepackage[none]{hyphenat}
-\usepackage{amssymb}
-\usepackage{relsize}
-\usepackage[cmex10]{amsmath}
-\usepackage{mathtools}
-\usepackage{amsmath}
-\usepackage{commath}
-\usepackage{amsthm}
-\interdisplaylinepenalty=2500
+%\doublespacing
+%\singlespacing
+%\usepackage[none]{hyphenat}
+%\usepackage{amssymb}
+%\usepackage{relsize}
+%\usepackage[cmex10]{amsmath}
+%\usepackage{mathtools}
+%\usepackage{amsmath}
+%\usepackage{commath}
+%\usepackage{amsthm}
+%\interdisplaylinepenalty=2500
 %\savesymbol{iint}
-\usepackage{txfonts}
+%\usepackage{txfonts}
 %\restoresymbol{TXF}{iint}
-\usepackage{wasysym}
-\usepackage{amsthm}
-\usepackage{mathrsfs}
-\usepackage{txfonts}
-\let\vec\mathbf{}
-\usepackage{stfloats}
-\usepackage{float}
-\usepackage{cite}
-\usepackage{cases}
-\usepackage{subfig}
+%\usepackage{wasysym}
+%\usepackage{amsthm}
+%\usepackage{mathrsfs}
+%\usepackage{txfonts}
+%\let\vec\mathbf{}
+%\usepackage{stfloats}
+%\usepackage{float}
+%\usepackage{cite}
+%\usepackage{cases}
+%\usepackage{subfig}
 %\usepackage{xtab}
-\usepackage{longtable}
-\usepackage{multirow}
+%\usepackage{longtable}
+%\usepackage{multirow}
 %\usepackage{algorithm}
-\usepackage{amssymb}
+%\usepackage{amssymb}
 %\usepackage{algpseudocode}
-\usepackage{enumitem}
-\usepackage{mathtools}
+%\usepackage{enumitem}
+%\usepackage{mathtools}
 %\usepackage{eenrc}
 %\usepackage[framemethod=tikz]{mdframed}
-\usepackage{listings}
 %\usepackage{listings}
-\usepackage[latin1]{inputenc}
+%\usepackage{listings}
+%\usepackage[latin1]{inputenc}
 %%\usepackage{color}{   
 %%\usepackage{lscape}
-\usepackage{textcomp}
-\usepackage{titling}
-\usepackage{hyperref}
+%\usepackage{textcomp}
+%\usepackage{titling}
+%\usepackage{hyperref}
 %\usepackage{fulbigskip}   
-\usepackage{tikz}
-\usepackage{graphicx}
-\lstset{
+%\usepackage{tikz}
+%\usepackage{graphicx}
+%\lstset{
   frame=single,
   breaklines=true
 }
-\let\vec\mathbf{}
-\usepackage{enumitem}
-\usepackage{graphicx}
-\usepackage{siunitx}
-\let\vec\mathbf{}
-\usepackage{enumitem}
-\usepackage{graphicx}
-\usepackage{enumitem}
-\usepackage{tfrupee}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mwe} % for blindtext and example-image-a in example
-\usepackage{wrapfig}
-\graphicspath{{figs/}}
-\providecommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
-\providecommand{\myvec}[1]{\ensuremath{\begin{bmatrix}#1\end{bmatrix}}}
-\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
-\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
-\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
+%\let\vec\mathbf{}
+%\usepackage{enumitem}
+%\usepackage{graphicx}
+%\usepackage{siunitx}
+%\let\vec\mathbf{}
+%\usepackage{enumitem}
+%\usepackage{graphicx}
+%\usepackage{enumitem}
+%\usepackage{tfrupee}
+%\usepackage{amsmath}
+%%\usepackage{amssymb}
+%\usepackage{mwe} % for blindtext and example-image-a in example
+%\usepackage{wrapfig}
+%\graphicspath{{figs/}}
+%\providecommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
+%\providecommand{\myvec}[1]{\ensuremath{\begin{bmatrix}#1\end{bmatrix}}}
+%\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
+%\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
+%\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
 
-\begin{document}
+%\begin{document}
 
-\title{Differentiation}
+%\title{Differentiation}
 
-\date{\today}
+%\date{\today}
 
 \begin{enumerate}
 \item The order and degree of the differential equation of the family of parabolas having vertex at origin and axis along positive x-axis is
@@ -104,4 +104,4 @@
 
 \end{enumerate}
 
-\end{document}
+%\end{document}
