--- a/gate/IN2023.tex
+++ b/gate/IN2023.tex
@@ -26,6 +26,7 @@ propagation delay. Given that $C = 1$ when the circuit is turned on, the frequen
         
         \includegraphics[width=\columnwidth]{/sdcard/digital-design/gate.png}
         \caption{Image}
+        \label{fig:Image}
         
 \end{figure}
     \begin{enumerate}
