--- a/Differentiation/diff.tex
+++ b/Differentiation/diff.tex
@@ -12,7 +12,6 @@
 %\usepackage{relsize}
 %\usepackage[cmex10]{amsmath}
 %\usepackage{mathtools}
-%\usepackage{amsmath}
 %\usepackage{commath}
 %\usepackage{amsthm}
 %\interdisplaylinepenalty=2500
@@ -42,8 +41,8 @@
 %\usepackage{listings}
 %\usepackage{listings}
 %\usepackage[latin1]{inputenc}
-%%\usepackage{color}{   
-%%\usepackage{lscape}
+%\usepackage{color}{   
+%\usepackage{lscape}
 %\usepackage{textcomp}
 %\usepackage{titling}
 %\usepackage{hyperref}
@@ -51,8 +50,8 @@
 %\usepackage{tikz}
 %\usepackage{graphicx}
 %\lstset{
-  frame=single,
-  breaklines=true
+  %frame=single,
+  %breaklines=true
 }
 %\let\vec\mathbf{}
 %\usepackage{enumitem}
@@ -64,7 +63,7 @@
 %\usepackage{enumitem}
 %\usepackage{tfrupee}
 %\usepackage{amsmath}
-%%\usepackage{amssymb}
+%\usepackage{amssymb}
 %\usepackage{mwe} % for blindtext and example-image-a in example
 %\usepackage{wrapfig}
 %\graphicspath{{figs/}}
@@ -91,9 +90,8 @@
 \item If $y = \log x$, then $\frac{d^2y}{dx^2}$ =  \rule{30pt}{1pt}.
 \item If $y = e^x + e^{-x}$, then show that $\frac{dy}{dx}$ = $\sqrt{y^2 - 4}$.
 
-\item If $y=x^{\sin x }+\sin^{-1}(\sqrt x)$, the find $\frac{dy}{dx}$.
-\item Find the intervals in which the function $f$ defined as $f(x) = \sin(x) + \cos(x)$, $0 \leq x \leq 2\pi$ is strictly increasing or decreasing.
-\item Prove that the radius of the right circular cylinder of greatest curved surface area which can be inscribed in a given cone is half of that of the cone. 
+\item If $y=x^{\sin x }+\sin^{-1}(\sqrt x )$, the find $\frac{dy}{dx}$.
+\item Find the intervals in which the function $f$ defined as $f(x) = sin x + cos x$, $0 \leq x \leq 2\pi$ is strictly increasing or decreasing.
 \item $\lim\limits_{x \to 0}{\frac{e^{-x} - e^x}{x}}$ is equal to
 \begin{enumerate}
     \item $2$
@@ -101,7 +99,6 @@
     \item $-1$
     \item $2$
 \end{enumerate}
-
 \end{enumerate}
 
 %\end{document}
